# ICondFS

./: CMakeLists.txt
include/: CMakeLists.txt  Particle.h  demonstrator.h
include/ICondFS/: Particle.h  demonstrator.h  demonstrator.h~
include/ICondFS/ImgStream/: CameraImgStream.h  ComponentImgStream.h  FileImgStream.h  Image.h  ImgStream.h  PTZImgStream.h
include/ICondFS/rackham/CVS/: Entries
include/ICondFS/rackham/detectors/: faceDetector.txt
include/ICondFS/rackham/filters/: body_tracking_icond_pedestrian.txt~  face_tracking_icond.txt
include/ICondFS/rackham/objectslist/: twoDDetectorList.txt
include/ICondFS/rackham/targets/: bodyROIPedestrian.txt
include/ImgStream/: CameraImgStream.h  ComponentImgStream.h  CompositeImgStream.h  FileImgStream.h
include/rackham/CVS/: Repository
include/rackham/detectors/: inputDetector.txt
include/rackham/detectors/haarcascades/: haarcascade_fullbody.xml
include/rackham/filters/: body_tracking_icond.txt  body_tracking_icond_pedestrian_filedetec.txt
include/rackham/targets/: bodyROI.txt  bodyROIPedestrian.old.txt  bodyTracking.txt  bodyTrackingPedestrian.txt  bodyTrackingPedestrianFiledetec.txt
src/: CMakeLists.txt  demonstrator.cpp
src/ImgStream/: CameraImgStream.cpp  ComponentImgStream.cpp  CompositeImgStream.cpp  FileImgStream.cpp  Image.cpp  ImgStream.cpp  PTZImgStream.cpp
