# Copyright (C) LAAS-CNRS
# Author : Elie MOUSSY
#
# This file is part of ICondFS.
# ICondFS is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

SET(NEWFILES
  demonstrator.h
  Particle.h
  ImgStream/ImgStream.h
  ImgStream/ComponentImgStream.h
  ImgStream/CameraImgStream.h
  ImgStream/Image.h
  ImgStream/CompositeImgStream.h
  ImgStream/FileImgStream.h
  rackham/color/ColorBaseList.txt
  rackham/color/skincolormodel_Irg
  rackham/color/skincolormodel_RGB
  rackham/color/bases/BGR.txt
  rackham/color/bases/HSV.txt
  rackham/color/bases/I1I2I3.txt
  rackham/color/bases/Irg.txt
  rackham/color/bases/Lab.txt
  rackham/color/bases/RGB.txt
  rackham/color/bases/rgbN.txt
  rackham/color/bases/YCrCb.txt
  rackham/color/bases/CVS/Entries
  rackham/color/bases/CVS/Repository
  rackham/color/bases/CVS/Root
  rackham/color/CVS/Entries
  rackham/color/CVS/Repository
  rackham/color/CVS/Root
  rackham/color/data/nonskin-32-32-32.hist
  rackham/color/data/nonskin-32-32-32.hist.lud
  rackham/color/data/skin-32-32-32.hist
  rackham/color/data/skin-32-32-32.hist.lud
  rackham/color/data/CVS/Entries
  rackham/color/data/CVS/Repository
  rackham/color/data/CVS/Root
  rackham/CVS/Entries
  rackham/CVS/Repository
  rackham/CVS/Root
  rackham/detectors/faceDetector.txt
  rackham/detectors/inputDetector.txt
  rackham/detectors/motionBlobDetector.txt
  rackham/detectors/motionDetector.txt
  rackham/detectors/skinBlobDetector.txt
  rackham/detectors/CVS/Entries
  rackham/detectors/CVS/Repository
  rackham/detectors/CVS/Root
  rackham/detectors/haarcascades/haarcascade_frontalface_alt.xml
  rackham/detectors/haarcascades/haarcascade_frontalface_alt2.xml
  rackham/detectors/haarcascades/haarcascade_frontalface_alt_tree.xml
  rackham/detectors/haarcascades/haarcascade_frontalface_default.xml
  rackham/detectors/haarcascades/haarcascade_fullbody.xml
  rackham/detectors/haarcascades/haarcascade_fullbody_alt.xml
  rackham/detectors/haarcascades/haarcascade_lowerbody.xml
  rackham/detectors/haarcascades/haarcascade_profileface.xml
  rackham/detectors/haarcascades/haarcascade_upperbody.xml
  rackham/detectors/haarcascades/CVS/Entries
  rackham/detectors/haarcascades/CVS/Repository
  rackham/detectors/haarcascades/CVS/Root
  rackham/facerec/Akin.jpg
  rackham/facerec/Aurelie.jpg
  rackham/facerec/Aurelie2.jpg
  rackham/facerec/baseList.txt
  rackham/facerec/Brice.jpg
  rackham/facerec/Daniel.jpg
  rackham/facerec/Hung.jpg
  rackham/facerec/Luis.jpg
  rackham/facerec/Mathias.jpg
  rackham/facerec/Maxime.jpg
  rackham/facerec/Rachid.jpg
  rackham/facerec/Sara.jpg
  rackham/facerec/Thierry.jpg
  rackham/facerec/Thierry2.jpg
  rackham/facerec/Thierry3.jpg
  rackham/facerec/Akin/*.jpg
  rackham/facerec/Akin/CVS/Entries
  rackham/facerec/Akin/CVS/Repository
  rackham/facerec/Akin/CVS/Root
  rackham/facerec/Aurelie/*.jpg
  rackham/facerec/Aurelie/CVS/Entries
  rackham/facerec/Aurelie/CVS/Repository
  rackham/facerec/Aurelie/CVS/Root
  rackham/facerec/Aurelie2/*.jpg
  rackham/facerec/Aurelie2/CVS/Entries
  rackham/facerec/Aurelie2/CVS/Repository
  rackham/facerec/Aurelie2/CVS/Root
  rackham/facerec/Brice/*.jpg
  rackham/facerec/Brice/CVS/Entries
  rackham/facerec/Brice/CVS/Repository
  rackham/facerec/Brice/CVS/Root
  rackham/facerec/CVS/Entries
  rackham/facerec/CVS/Repository
  rackham/facerec/CVS/Root
  rackham/facerec/Daniel/*.jpg
  rackham/facerec/Daniel/CVS/Entries
  rackham/facerec/Daniel/CVS/Repository
  rackham/facerec/Daniel/CVS/Root
  rackham/facerec/Fred/*.jpg
  rackham/facerec/Fred/CVS/Entries
  rackham/facerec/Fred/CVS/Repository
  rackham/facerec/Fred/CVS/Root
  rackham/facerec/Hung/*.jpg
  rackham/facerec/Luis/*.jpg
  rackham/facerec/Luis/CVS/Entries
  rackham/facerec/Luis/CVS/Repository
  rackham/facerec/Luis/CVS/Root
  rackham/facerec/Mathias/*.jpg
  rackham/facerec/Mathias/CVS/Entries
  rackham/facerec/Mathias/CVS/Repository
  rackham/facerec/Mathias/CVS/Root
  rackham/facerec/Maxime/*.jpg
  rackham/facerec/Rachid/*.jpg
  rackham/facerec/Rachid/CVS/Entries
  rackham/facerec/Rachid/CVS/Repository
  rackham/facerec/Rachid/CVS/Root
  rackham/facerec/ROMAIN/*.jpg
  rackham/facerec/Sara/*.jpg
  rackham/facerec/Sara/CVS/Entries
  rackham/facerec/Sara/CVS/Repository
  rackham/facerec/Sara/CVS/Root
  rackham/facerec/Thierry/*.jpg
  rackham/facerec/Thierry2/*.jpg
  rackham/facerec/Thierry2/CVS/Entries
  rackham/facerec/Thierry2/CVS/Repository
  rackham/facerec/Thierry2/CVS/Root
  rackham/facerec/Thierry4/*.jpg
  rackham/facerec/Thierry4/CVS/Entries
  rackham/facerec/Thierry4/CVS/Repository
  rackham/facerec/Thierry4/CVS/Root
  rackham/filters/body_tracking_icond.txt
  rackham/filters/body_tracking_icond_pedestrian.txt
  rackham/filters/body_tracking_icond_pedestrian_filedetec.txt
  rackham/filters/face_tracking_icond.txt
  rackham/filters/motion_monitoring_icond.txt
  rackham/filters/sir.txt
  rackham/filters/CVS/Entries
  rackham/filters/CVS/Repository
  rackham/filters/CVS/Root
  rackham/objectslist/ColorBeseList.txt
  rackham/objectslist/ContDynamicList.txt
  rackham/objectslist/DiscDynamicList.txt
  rackham/objectslist/PriorList.txt
  rackham/objectslist/TargetList.txt
  rackham/objectslist/TargetList.txt
  rackham/objectslist/twoDDetectorList.txt
  rackham/objectslist/CVS/Entries
  rackham/objectslist/CVS/Repository
  rackham/objectslist/CVS/Root
  rackham/shapes/fig2contour
  rackham/shapes/head.dat
  rackham/shapes/head1.dat
  rackham/shapes/head2.dat
  rackham/shapes/head3.dat
  rackham/shapes/head4.dat
  rackham/shapes/head_config.dat
  rackham/shapes/Lhand.dat
  rackham/shapes/Lhand1.dat
  rackham/shapes/Lhand1_config.dat
  rackham/shapes/Lhand2.dat
  rackham/shapes/Lhand2_config.dat
  rackham/shapes/Lhand3.dat
  rackham/shapes/Lhand3_config.dat
  rackham/shapes/Lhand4.dat
  rackham/shapes/Lhand5.dat
  rackham/shapes/Lhand6.dat
  rackham/shapes/Lhand6_config.dat
  rackham/shapes/Lhand7.dat
  rackham/shapes/Lhand7_config.dat
  rackham/shapes/Lhand_config.dat
  rackham/shapes/Lhand_config1.dat
  rackham/shapes/Rhand.dat
  rackham/shapes/Rhand1.dat
  rackham/shapes/Rhand1_config.dat
  rackham/shapes/Rhand2.dat
  rackham/shapes/Rhand2_config.dat
  rackham/shapes/Rhand3.dat
  rackham/shapes/Rhand3_config.dat
  rackham/shapes/Rhand4.dat
  rackham/shapes/Rhand5.dat
  rackham/shapes/Rhand7.dat
  rackham/shapes/Rhand7_config.dat
  rackham/shapes/Rhand_config.dat
  rackham/shapes/Rhand_config_first.dat
  rackham/shapes/CVS/Entries
  rackham/shapes/CVS/Repository
  rackham/shapes/CVS/Root
  rackham/shapes/tmp/Lhand.dat
  rackham/shapes/tmp/Lhand.fig
  rackham/shapes/tmp/CVS/Entries
  rackham/shapes/tmp/CVS/Repository
  rackham/shapes/tmp/CVS/Root
  rackham/targets/bodyROI.txt
  rackham/targets/bodyROIPedestrian.old.txt
  rackham/targets/bodyROIPedestrian.txt
  rackham/targets/bodyTracking.txt
  rackham/targets/bodyTrackingPedestrian.txt
  rackham/targets/bodyTrackingPedestrianFiledetec.txt
  rackham/targets/classificateurPedestrian.txt
  rackham/targets/faceROI_1.txt
  rackham/targets/faceROI_2.txt
  rackham/targets/facetracking
  rackham/targets/faceTracking.txt
  rackham/targets/faceTracking2.txt
  rackham/targets/fullBodyROI_c.txt
  rackham/targets/fullBodyROI_m.txt
  rackham/targets/motionMonitoring.txt
  rackham/targets/CVS/Entries
  rackham/targets/CVS/Repository
  rackham/targets/CVS/Root)

INSTALL(FILES ${NEWFILES}
	DESTINATION include/ICondFS
	PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE )